--- a/index.html
+++ b/index.html
@@ -122,24 +122,20 @@
         dgNeeded: false, dgLevel: null
       },
       "+1": {
-        eye: 0, orange: 0, abyss: 0, heaven: 0, glue: 500, b_tad: 160000,
+        eye: 1, orange: 0, abyss: 1, heaven: 0, glue: 800, b_tad: 280000,
         dgNeeded: true, dgLevel: "0"
       },
       "+2": {
-        eye: 0, orange: 0, abyss: 0, heaven: 0, glue: 750, b_tad: 250000,
+        eye: 1, orange: 0, abyss: 1, heaven: 0, glue: 1550, b_tad: 530000,
         dgNeeded: true, dgLevel: "+1"
       },
       "+3": {
-        eye: 0, orange: 0, abyss: 0, heaven: 0, glue: 1050, b_tad: 360000,
+        eye: 1, orange: 0, abyss: 1, heaven: 0, glue: 2600, b_tad: 890000,
         dgNeeded: true, dgLevel: "+2"
       },
       "+4": {
-        eye: 0, orange: 0, abyss: 0, heaven: 0, glue: 1400, b_tad: 490000,
+        eye: 1, orange: 0, abyss: 1, heaven: 0, glue: 4000, b_tad: 1380000,
         dgNeeded: true, dgLevel: "+3"
-      },
-      "+5": {
-        eye: 0, orange: 0, abyss: 0, heaven: 0, glue: 2000, b_tad: 600000,
-        dgNeeded: true, dgLevel: "+4"
       }
     };
 
@@ -147,24 +143,20 @@
     //    For example, if the game always requires 1 crystal for +1 and above:
     const AMULET = {
       "0": {
-        eye: 0, orange: 0, abyss: 0, heaven: 0,
-        glue: 0, b_tad: 0, dg_crystal: 0
+        eye: 1, orange: 0, abyss: 1, heaven: 1,
+        glue: 60, b_tad: 120000, dg_crystal: 0
       },
       "+1": {
-        eye: 1, orange: 100, abyss: 1, heaven: 1,
-        glue: 60, b_tad: 120000, dg_crystal: 1
+        eye: 2, orange: 100, abyss: 2, heaven: 2,
+        glue: 160, b_tad: 280000, dg_crystal: 1
       },
       "+2": {
-        eye: 1, orange: 200, abyss: 1, heaven: 1,
-        glue: 100, b_tad: 210000, dg_crystal: 1
+        eye: 3, orange: 300, abyss: 3, heaven: 3,
+        glue: 310, b_tad: 530000, dg_crystal: 1
       },
       "+3": {
-        eye: 1, orange: 300, abyss: 1, heaven: 1,
-        glue: 160, b_tad: 320000, dg_crystal: 1
-      },
-      "+4": {
-        eye: 1, orange: 400, abyss: 1, heaven: 1,
-        glue: 250, b_tad: 450000, dg_crystal: 1
+        eye: 4, orange: 600, abyss: 4, heaven: 4,
+        glue: 520, b_tad: 890000, dg_crystal: 1
       }
     };
 
