--- a/index.html
+++ b/index.html
@@ -4,26 +4,46 @@
   <meta charset="UTF-8" />
   <title>Minion Gear Calculator</title>
   <style>
-    /* ===== Inline CSS ===== */
+    /* ===== Enhanced CSS Styling ===== */
     body {
       margin: 20px;
-      font-family: sans-serif;
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f9;
+      color: #333;
     }
     h1, h2 {
       margin-bottom: 10px;
+      color: #4a4e69;
+      text-align: center;
     }
     .slot-container {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      padding: 10px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
     label {
       display: inline-block;
-      width: 60px;
+      width: 70px;
+      font-weight: bold;
+      color: #22223b;
     }
     #totals p {
-      margin: 4px 0;
+      margin: 6px 0;
+      font-size: 14px;
+      color: #4a4e69;
     }
     .upgrade-select {
-      min-width: 60px;
+      min-width: 80px;
+      padding: 5px;
+      border: 1px solid #9a8c98;
+      border-radius: 4px;
+      background-color: #f2e9e4;
+      color: #22223b;
+    }
+    .upgrade-select:hover {
+      border-color: #c9ada7;
     }
   </style>
 </head>
