Update resource labels for clarity

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <p>Heaven Wing: <span id="heavenTotal">0</span></p>
         <p>Glue: <span id="glueTotal">0</span></p>
         <p>B-tad: <span id="btadTotal">0</span></p>
-        <p>Will Crystal: <span id="willCrystalTotal">0</span></p>
+        <p>Crystal of Will: <span id="willCrystalTotal">0</span></p>
       </div>
       <div class="totals-column">
         <h3>Minion Gear Totals</h3>
@@ -160,7 +160,7 @@
         <p>Heaven Wing: <span id="minionHeavenTotal">0</span></p>
         <p>Glue: <span id="minionGlueTotal">0</span></p>
         <p>B-tad: <span id="minionBtadTotal">0</span></p>
-        <p>DG Crystal: <span id="minionDgCrystalTotal">0</span></p>
+        <p>Demon God Crystal: <span id="minionDgCrystalTotal">0</span></p>
       </div>
     </div>
 
