Add third row of Snail Gear slots and support for 18 total slots
- Introduce a third row of Snail Gear slots in index.html
- Update script.js to create and manage 18 total Snail Gear slots
- Add "None" option to Snail Gear dropdown in script.js
- Extend calculations and storage functions to support 18 slots
- Add None configuration to SNAIL_GEAR in data.js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <button id="resetSnail" class="reset-button">Reset Snail Gear</button>
       <div class="snail-row" id="snail-row-1"></div>
       <div class="snail-row" id="snail-row-2"></div>
+      <div class="snail-row" id="snail-row-3"></div>
     </div>
     <div class="calculator-section">
       <h1>Minion Gear Calculator</h1>
