Refactor gear data structure and update calculations
- Simplify SNAIL_GEAR and MINION_GEAR structures by consolidating properties and removing unnecessary fields.
- Update cumulative costs for gear upgrades in data.js.
- Modify script.js to directly reference new gear data structure for calculations.
- Enhance index.html for clearer labeling of gear totals.
- Implement event listeners for gear selection changes to streamline total calculations and local storage management.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div id="totals">
       <div class="totals-column">
         <h3>Snail Gear Totals</h3>
-        <p>Eye of Horus: <span id="eyeTotal">0</span></p>
-        <p>Orange: <span id="orangeTotal">0</span></p>
+        <p>Snail Eye (EoH): <span id="eyeTotal">0</span></p>
+        <p>Orange: <span id="orangeTotal">0</span></p> <!-- Added this line -->
         <p>Abyss Wing: <span id="abyssTotal">0</span></p>
         <p>Heaven Wing: <span id="heavenTotal">0</span></p>
         <p>Glue: <span id="glueTotal">0</span></p>
@@ -32,7 +32,7 @@
       </div>
       <div class="totals-column">
         <h3>Minion Gear Totals</h3>
-        <p>Eye of Blasphemy: <span id="minionEyeTotal">0</span></p>
+        <p>Minion Eye (EoB): <span id="minionEyeTotal">0</span></p>
         <p>Orange: <span id="minionOrangeTotal">0</span></p>
         <p>Abyss Wing: <span id="minionAbyssTotal">0</span></p>
         <p>Heaven Wing: <span id="minionHeavenTotal">0</span></p>
