--- a/index.html
+++ b/index.html
@@ -8,29 +8,51 @@
   <body>
     <div class="calculator-section">
       <h1>Snail Gear Calculator</h1>
-      <button id="resetSnail" class="reset-button">Reset Snail Gear</button>
-      <div class="snail-row" id="snail-row-1"></div>
-      <div class="snail-row" id="snail-row-2"></div>
-      <div class="snail-row" id="snail-row-3"></div>
-    </div>
-    <div class="calculator-section">
-      <h1>Minion Gear Calculator</h1>
-      <button id="resetMinion" class="reset-button">Reset Minion Gear</button>
-      <div class="horizontal-slots" id="minion-slots"></div>
-    </div>
-    <h2>Totals</h2>
-    <div id="totals">
-      <div class="totals-column">
+      <div class="button-row">
+        <button id="resetSnail" class="reset-button">Reset</button>
+        <span class="preset-group">
+          Preset 1: <button id="saveSnailPreset1">Save</button> <button id="loadSnailPreset1">Load</button>
+          Preset 2: <button id="saveSnailPreset2">Save</button> <button id="loadSnailPreset2">Load</button>
+          Preset 3: <button id="saveSnailPreset3">Save</button> <button id="loadSnailPreset3">Load</button>
+        </span>
+      </div>
+      <div class="snail-label equipped-label">Equipped</div>
+      <div class="snail-row equipped-row" id="snail-row-1"></div>
+      <div class="snail-row equipped-row" id="snail-row-2"></div>
+      <div class="snail-label unequipped-label">Unequipped</div>
+      <div class="snail-row unequipped-row" id="snail-row-3"></div>
+      <div class="totals-column" id="snail-totals">
         <h3>Snail Gear Totals</h3>
         <p>Snail Eye (EoH): <span id="eyeTotal">0</span></p>
-        <p>Orange: <span id="orangeTotal">0</span></p> <!-- Added this line -->
+        <p>Orange: <span id="orangeTotal">0</span></p>
         <p>Abyss Wing: <span id="abyssTotal">0</span></p>
         <p>Heaven Wing: <span id="heavenTotal">0</span></p>
         <p>Glue: <span id="glueTotal">0</span></p>
         <p>B-tad: <span id="btadTotal">0</span></p>
         <p>Crystal of Will: <span id="willCrystalTotal">0</span></p>
       </div>
-      <div class="totals-column">
+      <div class="accordion-section">
+        <button class="accordion-toggle" id="snailAccordionToggle">Compare Presets</button>
+        <div class="accordion-content" id="snailAccordionContent" style="display:none;">
+          <div id="snailCompareTable"></div>
+        </div>
+      </div>
+    </div>
+    <div class="calculator-section">
+      <h1>Minion Gear Calculator</h1>
+      <div class="button-row">
+        <button id="resetMinion" class="reset-button">Reset</button>
+        <span class="preset-group">
+          Preset 1: <button id="saveMinionPreset1">Save</button> <button id="loadMinionPreset1">Load</button>
+          Preset 2: <button id="saveMinionPreset2">Save</button> <button id="loadMinionPreset2">Load</button>
+          Preset 3: <button id="saveMinionPreset3">Save</button> <button id="loadMinionPreset3">Load</button>
+        </span>
+      </div>
+      <div class="minion-label equipped-label">Equipped</div>
+      <div class="horizontal-slots equipped-row" id="minion-row-1"></div>
+      <div class="minion-label unequipped-label">Unequipped</div>
+      <div class="horizontal-slots unequipped-row" id="minion-row-2"></div>
+      <div class="totals-column" id="minion-totals">
         <h3>Minion Gear Totals</h3>
         <p>Minion Eye (EoB): <span id="minionEyeTotal">0</span></p>
         <p>Orange: <span id="minionOrangeTotal">0</span></p>
@@ -39,6 +61,12 @@
         <p>Glue: <span id="minionGlueTotal">0</span></p>
         <p>B-tad: <span id="minionBtadTotal">0</span></p>
         <p>Demon God Crystal: <span id="minionDgCrystalTotal">0</span></p>
+      </div>
+      <div class="accordion-section">
+        <button class="accordion-toggle" id="minionAccordionToggle">Compare Presets</button>
+        <div class="accordion-content" id="minionAccordionContent" style="display:none;">
+          <div id="minionCompareTable"></div>
+        </div>
       </div>
     </div>
     <script src="data.js"></script>
