Refactor Preset Layout and Enhance Styling for Snail and Minion Gear Calculators
- Restructure preset buttons in index.html into distinct preset sets for improved organization and readability.
- Update CSS to enhance the visual layout of preset groups, including grid display and styling adjustments for labels and buttons.
- Apply consistent font styling across headings and preset labels to improve overall aesthetics.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
       <div class="button-row">
         <button id="resetSnail" class="reset-button">Reset</button>
         <div class="preset-group">
-          <span class="preset-label">Preset 1:</span>
-          <button id="saveSnailPreset1" class="preset-button">Save</button>
-          <button id="loadSnailPreset1" class="preset-button">Load</button>
-          <span class="preset-label">Preset 2:</span>
-          <button id="saveSnailPreset2" class="preset-button">Save</button>
-          <button id="loadSnailPreset2" class="preset-button">Load</button>
-          <span class="preset-label">Preset 3:</span>
-          <button id="saveSnailPreset3" class="preset-button">Save</button>
-          <button id="loadSnailPreset3" class="preset-button">Load</button>
+          <div class="preset-set">
+            <span class="preset-label">Preset 1:</span>
+            <button id="saveSnailPreset1" class="preset-button">Save</button>
+            <button id="loadSnailPreset1" class="preset-button">Load</button>
+          </div>
+          <div class="preset-set">
+            <span class="preset-label">Preset 2:</span>
+            <button id="saveSnailPreset2" class="preset-button">Save</button>
+            <button id="loadSnailPreset2" class="preset-button">Load</button>
+          </div>
+          <div class="preset-set">
+            <span class="preset-label">Preset 3:</span>
+            <button id="saveSnailPreset3" class="preset-button">Save</button>
+            <button id="loadSnailPreset3" class="preset-button">Load</button>
+          </div>
         </div>
       </div>
       <div class="snail-label equipped-label">Equipped</div>
@@ -37,15 +43,21 @@
       <div class="button-row">
         <button id="resetMinion" class="reset-button">Reset</button>
         <div class="preset-group">
-          <span class="preset-label">Preset 1:</span>
-          <button id="saveMinionPreset1" class="preset-button">Save</button>
-          <button id="loadMinionPreset1" class="preset-button">Load</button>
-          <span class="preset-label">Preset 2:</span>
-          <button id="saveMinionPreset2" class="preset-button">Save</button>
-          <button id="loadMinionPreset2" class="preset-button">Load</button>
-          <span class="preset-label">Preset 3:</span>
-          <button id="saveMinionPreset3" class="preset-button">Save</button>
-          <button id="loadMinionPreset3" class="preset-button">Load</button>
+          <div class="preset-set">
+            <span class="preset-label">Preset 1:</span>
+            <button id="saveMinionPreset1" class="preset-button">Save</button>
+            <button id="loadMinionPreset1" class="preset-button">Load</button>
+          </div>
+          <div class="preset-set">
+            <span class="preset-label">Preset 2:</span>
+            <button id="saveMinionPreset2" class="preset-button">Save</button>
+            <button id="loadMinionPreset2" class="preset-button">Load</button>
+          </div>
+          <div class="preset-set">
+            <span class="preset-label">Preset 3:</span>
+            <button id="saveMinionPreset3" class="preset-button">Save</button>
+            <button id="loadMinionPreset3" class="preset-button">Load</button>
+          </div>
         </div>
       </div>
       <div class="minion-label equipped-label">Equipped</div>
