Add Eye of Horus icon and update index.html to include it as favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Gear Calculator</title>
+    <link rel="icon" type="image/png" href="Eye_of_Horus.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
