Enhance Snail Gear UI with Expand/Collapse Feature and Update Slot Handling
- Added a toggle button for expanding/collapsing the unequipped snail section in index.html.
- Updated script.js to handle an increased number of snail slots from 18 to 24, ensuring calculations and local storage functions accommodate the new range.
- Enhanced CSS with styles for the toggle button to improve user interaction and visual appeal.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
       <div class="snail-label equipped-label">Equipped</div>
       <div class="snail-row equipped-row" id="snail-row-1"></div>
       <div class="snail-row equipped-row" id="snail-row-2"></div>
-      <div class="snail-label unequipped-label">Unequipped</div>
-      <div class="snail-row unequipped-row" id="snail-row-3"></div>
+<div class="snail-label unequipped-label">
+  Unequipped
+  <button id="toggleUnequipped" class="toggle-section-btn" aria-expanded="true" aria-controls="snail-row-3">−</button>
+</div>
+<div class="snail-row unequipped-row" id="snail-row-3"></div>
       <div class="totals-column" id="snail-totals">
         <h3>Snail Gear Costs</h3>
         <div id="snailMainTable"></div>
