--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
       </div>
       <div class="minion-label equipped-label">Equipped</div>
       <div class="horizontal-slots equipped-row" id="minion-row-1"></div>
-      <div class="minion-label unequipped-label">Unequipped</div>
+      <div class="minion-label unequipped-label">
+        Unequipped
+        <button id="toggleMinionUnequipped" class="toggle-section-btn" aria-expanded="true" aria-controls="minion-row-2">−</button>
+      </div>
       <div class="horizontal-slots unequipped-row" id="minion-row-2"></div>
       <div class="totals-column" id="minion-totals">
         <h3>Minion Gear Costs</h3>
