--- a/index.html
+++ b/index.html
@@ -2,80 +2,103 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Gear Calculator</title>
+    <title>Gear & Rocket Calculator</title>
     <link rel="icon" type="image/png" href="Eye_of_Horus.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="calculator-section">
-      <h1>Snail Gear Calculator</h1>
-      <div class="button-row">
-        <button id="resetSnail" class="reset-button">Reset</button>
-        <div class="preset-group">
-          <div class="preset-set">
-            <span class="preset-label">Preset 1:</span>
-            <button id="saveSnailPreset1" class="preset-button">Save</button>
-            <button id="loadSnailPreset1" class="preset-button">Load</button>
-          </div>
-          <div class="preset-set">
-            <span class="preset-label">Preset 2:</span>
-            <button id="saveSnailPreset2" class="preset-button">Save</button>
-            <button id="loadSnailPreset2" class="preset-button">Load</button>
-          </div>
-          <div class="preset-set">
-            <span class="preset-label">Preset 3:</span>
-            <button id="saveSnailPreset3" class="preset-button">Save</button>
-            <button id="loadSnailPreset3" class="preset-button">Load</button>
+    <!-- Main Calculator Switcher -->
+    <div class="calculator-switcher">
+      <button id="showGearCalc" class="switcher-btn active">Gear Calculator</button>
+      <button id="showRocketCalc" class="switcher-btn">Rocket Cabin Calculator</button>
+    </div>
+
+    <!-- ===== GEAR CALCULATOR SECTION ===== -->
+    <div id="gearCalculator" class="calculator-container">
+      <div class="calculator-section">
+        <h1>Snail Gear Calculator</h1>
+        <div class="button-row">
+          <button id="resetSnail" class="reset-button">Reset</button>
+          <div class="preset-group">
+            <div class="preset-set">
+              <span class="preset-label">Preset 1:</span>
+              <button id="saveSnailPreset1" class="preset-button">Save</button>
+              <button id="loadSnailPreset1" class="preset-button">Load</button>
+            </div>
+            <div class="preset-set">
+              <span class="preset-label">Preset 2:</span>
+              <button id="saveSnailPreset2" class="preset-button">Save</button>
+              <button id="loadSnailPreset2" class="preset-button">Load</button>
+            </div>
+            <div class="preset-set">
+              <span class="preset-label">Preset 3:</span>
+              <button id="saveSnailPreset3" class="preset-button">Save</button>
+              <button id="loadSnailPreset3" class="preset-button">Load</button>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="snail-label equipped-label">Equipped</div>
-      <div class="snail-row equipped-row" id="snail-row-1"></div>
-      <div class="snail-row equipped-row" id="snail-row-2"></div>
-<div class="snail-label unequipped-label">
-  Unequipped
-  <button id="toggleUnequipped" class="toggle-section-btn" aria-expanded="true" aria-controls="snail-row-3">−</button>
-</div>
-<div class="snail-row unequipped-row" id="snail-row-3"></div>
-      <div class="totals-column" id="snail-totals">
-        <h3>Snail Gear Costs</h3>
-        <div id="snailMainTable"></div>
-      </div>
-    </div>
-    <div class="calculator-section">
-      <h1>Minion Gear Calculator</h1>
-      <div class="button-row">
-        <button id="resetMinion" class="reset-button">Reset</button>
-        <div class="preset-group">
-          <div class="preset-set">
-            <span class="preset-label">Preset 1:</span>
-            <button id="saveMinionPreset1" class="preset-button">Save</button>
-            <button id="loadMinionPreset1" class="preset-button">Load</button>
-          </div>
-          <div class="preset-set">
-            <span class="preset-label">Preset 2:</span>
-            <button id="saveMinionPreset2" class="preset-button">Save</button>
-            <button id="loadMinionPreset2" class="preset-button">Load</button>
-          </div>
-          <div class="preset-set">
-            <span class="preset-label">Preset 3:</span>
-            <button id="saveMinionPreset3" class="preset-button">Save</button>
-            <button id="loadMinionPreset3" class="preset-button">Load</button>
-          </div>
+        <div class="snail-label equipped-label">Equipped</div>
+        <div class="snail-row equipped-row" id="snail-row-1"></div>
+        <div class="snail-row equipped-row" id="snail-row-2"></div>
+        <div class="snail-label unequipped-label">
+          Unequipped
+          <button id="toggleUnequipped" class="toggle-section-btn" aria-expanded="true" aria-controls="snail-row-3">−</button>
+        </div>
+        <div class="snail-row unequipped-row" id="snail-row-3"></div>
+        <div class="totals-column" id="snail-totals">
+          <h3>Snail Gear Costs</h3>
+          <div id="snailMainTable"></div>
         </div>
       </div>
-      <div class="minion-label equipped-label">Equipped</div>
-      <div class="horizontal-slots equipped-row" id="minion-row-1"></div>
-      <div class="minion-label unequipped-label">
-        Unequipped
-        <button id="toggleMinionUnequipped" class="toggle-section-btn" aria-expanded="true" aria-controls="minion-row-2">−</button>
-      </div>
-      <div class="horizontal-slots unequipped-row" id="minion-row-2"></div>
-      <div class="totals-column" id="minion-totals">
-        <h3>Minion Gear Costs</h3>
-        <div id="minionMainTable"></div>
+      <div class="calculator-section">
+        <h1>Minion Gear Calculator</h1>
+        <div class="button-row">
+          <button id="resetMinion" class="reset-button">Reset</button>
+          <div class="preset-group">
+            <div class="preset-set">
+              <span class="preset-label">Preset 1:</span>
+              <button id="saveMinionPreset1" class="preset-button">Save</button>
+              <button id="loadMinionPreset1" class="preset-button">Load</button>
+            </div>
+            <div class="preset-set">
+              <span class="preset-label">Preset 2:</span>
+              <button id="saveMinionPreset2" class="preset-button">Save</button>
+              <button id="loadMinionPreset2" class="preset-button">Load</button>
+            </div>
+            <div class="preset-set">
+              <span class="preset-label">Preset 3:</span>
+              <button id="saveMinionPreset3" class="preset-button">Save</button>
+              <button id="loadMinionPreset3" class="preset-button">Load</button>
+            </div>
+          </div>
+        </div>
+        <div class="minion-label equipped-label">Equipped</div>
+        <div class="horizontal-slots equipped-row" id="minion-row-1"></div>
+        <div class="minion-label unequipped-label">
+          Unequipped
+          <button id="toggleMinionUnequipped" class="toggle-section-btn" aria-expanded="true" aria-controls="minion-row-2">−</button>
+        </div>
+        <div class="horizontal-slots unequipped-row" id="minion-row-2"></div>
+        <div class="totals-column" id="minion-totals">
+          <h3>Minion Gear Costs</h3>
+          <div id="minionMainTable"></div>
+        </div>
       </div>
     </div>
+
+    <!-- ===== ROCKET CABIN CALCULATOR SECTION (Initially Hidden) ===== -->
+    <div id="rocketCalculator" class="calculator-container" style="display: none;">
+      <div class="calculator-section">
+        <h1>Rocket Cabin Upgrade Calculator</h1>
+        <p style="text-align: center; max-width: 800px; margin: 0 auto 20px;">
+          Select the target tier for each device. Costs are shown as T1 equivalents based on the 5x rule for each tier.
+        </p>
+
+        <!-- Container for the three cabin grids -->
+        <div id="rocket-cabins-container"></div>
+      </div>
+    </div>
+
     <script src="data.js"></script>
     <script src="script.js"></script>
   </body>
