Enhance Rocket Cabin Calculator with Material Cost Display and Reset Functionality
- Updated the description in index.html to clarify the new material cost display options (T1–T5) for better user planning.
- Added a "Reset Excess" button in script.js to clear excess material data from local storage and refresh the summary display.
- Adjusted the width of the tier toggle dropdown in styles.css for improved usability.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="calculator-section">
         <h1>Rocket Cabin Upgrade Calculator</h1>
         <p style="text-align: center; max-width: 800px; margin: 0 auto 20px;">
-          Select the target tier for each device. Costs are shown as T1 equivalents based on the 5x rule for each tier.
+          Select the target tier for each device. You can now choose how material costs are displayed (T1–T5) using the dropdown beneath each summary table. All totals will update to your selected tier for easier planning.
         </p>
 
         <!-- Container for the three cabin grids -->
