Add Token Probability Feature to Stele Calculator
- Introduced a new section in index.html for users to check token probabilities and luck based on their input.
- Implemented logic in stele.js to calculate and display the probability of reaching a specific Stele level with a given number of tokens.
- Added event listeners for user interactions to update the probability results dynamically.

--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
           <canvas id="distributionChart"></canvas>
         </div>
 
+        <!-- Token Probability Feature -->
+        <div class="stele-token-prob-container" style="margin: 24px 0 12px 0; text-align: center;">
+          <label for="steleTokenInput" style="font-weight: bold; margin-right: 8px;">Check your luck:</label>
+          <input type="number" id="steleTokenInput" min="1" style="width: 90px; font-size: 1.1em; margin-right: 8px;" placeholder="Tokens">
+          <button id="steleTokenCheckBtn" style="font-size: 1em; padding: 3px 16px;">Check</button>
+          <div id="steleTokenProbResult" style="margin-top: 10px; font-size: 1.08em; color: #1a237e;"></div>
+        </div>
+
         <div class="info-panel">
           <h3 class="stele-prob-heading" style="margin-bottom: 15px; text-align: center;">Recruit Token Probabilities</h3>
           <div class="stele-prob-row">
