remove median card, remove redundant check your luck text

--- a/index.html
+++ b/index.html
@@ -123,10 +123,6 @@
         <div class="stele-stats-outer" id="statsGrid" style="display: none;">
           <div class="stele-stats-row stele-stats-row1">
             <div class="stat-card">
-              <div class="stat-value blue" id="meanStat">-</div>
-              <div class="stat-label">Mean Tokens</div>
-            </div>
-            <div class="stat-card">
               <div class="stat-value orange" id="stdDevStat">-</div>
               <div class="stat-label">Std Deviation</div>
             </div>
@@ -137,8 +133,8 @@
               <div class="stat-label">Minimum</div>
             </div>
             <div class="stat-card">
-              <div class="stat-value purple" id="medianStat">-</div>
-              <div class="stat-label">Median</div>
+              <div class="stat-value blue" id="meanStat">-</div>
+              <div class="stat-label">Mean</div>
             </div>
             <div class="stat-card">
               <div class="stat-value red" id="maxStat">-</div>
