add goatcounter analytics

--- a/index.html
+++ b/index.html
@@ -172,5 +172,6 @@
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <script type="module" src="stele.js"></script>
+    <script data-goatcounter="https://snailcalc.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
