--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Gear & Rocket Calculator</title>
+    <title>Snail Game Calculators</title>
     <link rel="icon" type="image/png" href="Eye_of_Horus.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
