--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     </div>
 
     <!-- ===== GEAR CALCULATOR SECTION ===== -->
-    <div id="gearCalculator" class="calculator-container">
+<div id="gearCalculator" class="calculator-container">
       <div class="calculator-section">
         <h1>Snail Gear Calculator</h1>
+        <div class="info-blurb">
+          This calculator helps you plan and optimize your snail and minion gear setups. Use presets to save and load configurations for quick comparisons.
+        </div>
         <div class="button-row">
           <button id="resetSnail" class="reset-button">Reset</button>
           <div class="preset-group">
@@ -88,12 +91,12 @@
     </div>
 
     <!-- ===== ROCKET CABIN CALCULATOR SECTION (Initially Hidden) ===== -->
-    <div id="rocketCalculator" class="calculator-container" style="display: none;">
+<div id="rocketCalculator" class="calculator-container" style="display: none;">
       <div class="calculator-section">
         <h1>Rocket Cabin Upgrade Calculator</h1>
-        <p style="text-align: center; max-width: 800px; margin: 0 auto 20px;">
+        <div class="info-blurb">
           Select the target tier for each device. You can now choose how material costs are displayed (T1–T5) using the dropdown beneath each summary table. All totals will update to your selected tier for easier planning.
-        </p>
+        </div>
 
         <!-- Container for the three cabin grids -->
         <div id="rocket-cabins-container"></div>
@@ -104,7 +107,7 @@
     <div id="steleCalculator" class="calculator-container" style="display: none;">
       <div class="calculator-section">
         <h1>Stele Level Distribution Analysis</h1>
-        <div class="stele-info-blurb tight-info-blurb">
+<div class="info-blurb">
           This calculator runs 10,000 simulations to estimate the number of tokens needed to reach a selected Stele level, based on the game's token probabilities. Click a Stele level button below to recalculate for that level.
         </div>
 
