feat: add dark/light theme toggle with persistent preference
Add theme switching functionality that allows users to toggle between dark and light modes. The selected theme preference is saved to localStorage and persists across sessions.

Changes:
- Add theme toggle button with emoji icons (moon/sun) in HTML
- Implement theme toggle logic in JavaScript with localStorage support
- Introduce CSS custom properties for comprehensive theme system
- Define color schemes for both light and dark modes
- Replace hardcoded colors with CSS variables throughout stylesheet
- Apply theme via data-theme attribute on html element

The theme toggle provides better user experience by allowing users to choose their preferred color scheme and maintains their selection across page reloads.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- Theme Toggle Button -->
+    <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
+      <span id="themeIcon">🌙</span>
+    </button>
+
     <!-- Main Calculator Switcher -->
     <div class="calculator-switcher">
       <button id="showGearCalc" class="switcher-btn active">Gear Calculator</button>
