refactor: rename veggie to vegetable for naming consistency
- Rename clownVeggie to clownVegetable in all recipe definitions
- Rename miracVeggie to miracVegetable in all recipe definitions
- Update related variable names (veggieResult → vegetableResult)
- Add miraculand vegetable purchase ROI calculation

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
           Configure your recipes and shop options below, and the calculator will show you the most profitable dishes and daily ROI.
         </div>
         
+        <!-- Daily Income Summary -->
+        <div id="cooking-daily-summary"></div>
+        
         <!-- Preset Buttons -->
         <div class="button-row">
           <button id="resetCooking" class="btn btn-secondary reset-button">Reset All</button>
