feat: persist last selected calculator across page loads
Add localStorage-based persistence for the calculator switcher to
remember the user's last selected calculator tab. On page load,
directly display the saved calculator without triggering click
events to avoid visual flash. Default to gear calculator if no
preference is saved.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <!-- Main Calculator Switcher -->
     <div class="calculator-switcher">
-      <button id="showGearCalc" class="btn btn-secondary btn-lg switcher-btn active">Gear Calculator</button>
+      <button id="showGearCalc" class="btn btn-secondary btn-lg switcher-btn">Gear Calculator</button>
       <button id="showRocketCalc" class="btn btn-secondary btn-lg switcher-btn">Rocket Cabin Calculator</button>
       <button id="showSteleCalc" class="btn btn-secondary btn-lg switcher-btn">Stele Calculator</button>      
       <button id="showCookingCalc" class="btn btn-secondary btn-lg switcher-btn">Cooking Calculator</button>
     </div>
 
     <!-- ===== GEAR CALCULATOR SECTION ===== -->
-<div id="gearCalculator" class="calculator-container">
+<div id="gearCalculator" class="calculator-container" style="display: none;">
       <div class="calculator-section">
         <h1>Snail Gear Calculator</h1>
         <div class="info-blurb">
