--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <!-- Vendor Configuration Section -->
         <div class="cooking-section">
           <div class="d-flex items-center gap-sm" style="margin-bottom: 15px;">
-            <h3 style="margin: 0;">🎪 Vendor Configuration</h3>
+            <h3 style="margin: 0;">🪙 Vendor Configuration</h3>
           </div>
           <div id="cooking-vendor-config"></div>
         </div>
